--- a/frontend/src/pages/MLBData/MLBData.scss
+++ b/frontend/src/pages/MLBData/MLBData.scss
@@ -3,7 +3,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 100lvh;
   text-align: center;
 }
 
